k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: walkguide
spec:
  type: ClusterIP
  selector: { app: walkguide }
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
